Move CSMath.convertUnits -> Temperature.class, add unit definition support for dimension temp configs
Took 5 minutes